fix object fit flickering

--- a/css/product.css
+++ b/css/product.css
@@ -11,6 +11,8 @@ body {
 
 .image {
     object-fit: contain;
+    max-height: 100%;
+    width: 100%;
 }
 
 .carousel-item  {
